# valorant-tracker-overlay

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  lib.rs  main.rs  state.rs
src-tauri/src/api/: client.rs  mod.rs  types.rs
src/components/: ApiSettingsModal.tsx  Footer.tsx  Header.tsx  IngameState.tsx  PlayerCard.tsx  PlayerPanel.tsx  PlayerStatsModal.tsx  PregameState.tsx  SettingsModal.tsx  SettingsPanel.tsx  SidePanel.tsx  StatusIndicator.tsx  WaitingState.tsx  WeaponOverlay.tsx
src/lib/: constants.ts  i18n.ts  types.ts
src/stores/: assetsStore.ts  gameStore.ts  panelStore.ts  settingsStore.ts  updateStore.ts
