[package]
name = "valorant-tracker"
version = "0.1.0"
description = "Valorant Match Tracker"
authors = ["omerg"]
edition = "2021"

[lib]
name = "valorant_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
base64 = "0.22"
thiserror = "2"
parking_lot = "0.12"
tracing = "0.1"
once_cell = "1.19"
tauri-plugin-shell = "2.3.3"
